--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -5,10 +5,10 @@ import Section from "./Section.astro";
 ---
 
 <Section id="contact">
-  <div class="mb-[140px] relative">
+  <div class="mb-16">
     <SectionTitle
-      sectionTitle="Contact Us"
-      description="Connect with Us: Let's Discuss Your Digital Marketing Needs"
+      sectionTitle="Contacto"
+      description="¿Tienes una idea, necesitas una solución tecnológica o quieres saber más sobre nuestros servicios? Escríbenos."
     />
     <Form />
   </div>
