--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -4,122 +4,52 @@ import Facebook from "../../assets/facebook.svg";
 import Linkedin from "../../assets/linkedin.svg";
 import Logo from "../../assets/logo-alt.svg";
 import Twitter from "../../assets/twitter.svg";
-import ShortForm from "../ui/ShortForm.astro";
 
 const logos = [
   { name: "Facebook", src: Facebook, link: "https://facebook.com" },
   { name: "Linkedin", src: Linkedin, link: "https://linkedin.com" },
   { name: "Twitter", src: Twitter, link: "https://twitter.com" },
 ];
-
-const links = [
-  { name: "About us", href: "#about" },
-  { name: "Services", href: "#services" },
-  { name: "Use Cases", href: "#cases" },
-  { name: "Pricing", href: "#Testimonials" },
-  { name: "Blog", href: "#Home" },
-];
 ---
 
 <section class="sm:px-5">
-  <div class="w-full max-w-[1240px] mx-auto">
-    <div
-      class="px-[15px] bg-dark text-gray py-[55px] lg:px-[60px] sm:rounded-t-[45px]"
-    >
-      <div>
-        <div
-          class="flex flex-col lg:flex-row gap-7 items-center justify-between"
-        >
-          <picture>
-            <a href="#home">
-              <Image src={Logo} alt="Logo for Kreatif Brand" />
-            </a>
-          </picture>
-          <ul class="flex flex-col sm:flex-row gap-5">
-            {
-              links.map((link) => {
-                return (
-                  <li class="text-center">
-                    <a class="underline" href={link.href}>
-                      {link.name}
-                    </a>
-                  </li>
-                );
-              })
-            }
-          </ul>
-          <ul class="flex gap-5">
-            {
-              logos.map((logo) => {
-                return (
-                  <li>
-                    <a href={logo.link} target="_blank">
-                      <picture>
-                        <Image src={logo.src} alt={logo.name} />
-                      </picture>
-                    </a>
-                  </li>
-                );
-              })
-            }
-          </ul>
+  <div class="w-full mx-auto">
+    <div class="px-[15px] bg-dark text-gray py-[55px] lg:px-[60px] sm:rounded-t-[45px]">
+      <!-- Fila principal: Contacto + Redes -->
+      <div class="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-8 mb-[66px]">
+        <!-- Contactos (a la izquierda en lg) -->
+        <div class="flex flex-col w-full lg:w-[30%] text-center lg:text-start">
+          <h3 class="mb-5 text-center md:text-left text-2xl text-green">Contactos</h3>
+          <div class="flex flex-col justify-between gap-4">
+            <span>Email: miracode@gmail.com</span>
+            <span>Celular: +519 1234567</span>
+            <span class="lg:w-3/4">Dirección: Av/Arequipa 1234, Bolivia</span>
+          </div>
         </div>
 
-        <div class="flex flex-col lg:flex-row mt-[66px] mb-[51px]">
-          <div
-            class="flex text-center lg:text-start flex-col w-full lg:w-[30%]"
-          >
-            <h3 class="mb-5 text-center md:text-left text-2xl text-green">Contact us</h3>
-            <div class="flex flex-col justify-between gap-4">
-              <span> Email: examplemail.com </span>
-              <span> Phone: +123 456 789 </span>
-              <span class="lg:w-3/4">
-                Address: 1234 Street Name, City Name, Country Name
-              </span>
-            </div>
-          </div>
-          <div class="flex-grow my-10 lg:my-0 lg:ml-12">
-            <ShortForm />
-          </div>
-        </div>
+        <!-- Redes sociales (a la derecha en lg) -->
+        <ul class="flex gap-5">
+          {logos.map((logo) => (
+            <li key={logo.name}>
+              <a href={logo.link.trim()} target="_blank">
+                <picture>
+                  <Image src={logo.src} alt={logo.name} />
+                </picture>
+              </a>
+            </li>
+          ))}
+        </ul>
       </div>
 
+      <!-- Separador -->
       <div class="h-[1px] bg-gray mb-5"></div>
-      <div
-        class="flex flex-col lg:flex-row h-20 justify-center mt-4 text-center md:justify-between md:mt-0"
-      >
-        <span
-          >2024 Positivus - Made With <a
-            class="underline"
-            target="_blank"
-            href="https://astro.build">Astro</a
-          > by 
-          <a 
-          class="underline"
-          target="_blank"
-          href="https://manulthanura.com">Manul</a
-          ></span
-        >&nbsp
+
+      <!-- Copyright (siempre centrado) -->
+      <div class="flex flex-col lg:flex-row h-20 justify-center items-center text-center">
         <span>
-          Credits (
-          <a
-            href="https://www.olgaskuja.design/"
-            target="_blank"
-            class="underline">Olga</a
-          >,
-          <a
-            href="https://esteban-vasquez.netlify.app/"
-            target="_blank"
-            class="underline">Esteban</a
-          >)
-          <span> &</span>
-          <a
-            class="underline"
-            href="https://creativecommons.org/licenses/by/4.0/"
-            target="_blank">Licence</a
-          >
+          2025 Miracode - by Copiright 
         </span>
-      </div>
+      </div>  
     </div>
   </div>
 </section>
