--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -2,14 +2,13 @@
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
-  { href: '/about', label: 'About us' },
-  { href: '/services', label: 'Services' },
-  { href: '/#cases', label: 'Use Cases' },
-  { href: '/pricing', label: 'Pricing' },
-  { href: '/articles', label: 'Blog'},
+{ href: '/about', label: 'Sobre nosotros' },
+{ href: '/services', label: 'Servicios' },
+{ href: '/pricing', label: 'Precios' },
+{ href: '/articles', label: 'Blog'},
 ];
 
-const navButton = { href: 'https://github.com/manulthanura/Positivus', label: 'Request a quote' };
+const navButton = { href: '#', label: 'Contactanos' };
 ---
 
 <div class="mt-20">
