--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -5,26 +5,20 @@ import Card from "./Card.astro";
 import gob from "../../assets/icon6.svg";
 import wob from "../../assets/icon7.svg";
 
-/* 
-1. Gray card with green title and green on black icon 
-2. Green card with gray title and green on black icon
-3. Black card with gray title and gray on black icon
-*/
-
 const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
 ---
 
 <Card isUnderline={true}>
   <div
-    class=`h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] ${index === 1 ? 'bg-gray' : index === 2 ? 'bg-green' : 'bg-dark text-gray'}`
+    class="h-[300px] w-full sm:h-full lg:gap-[60px] grid custom-grid lg:grid-cols-2 lg:grid-rows-1 p-8 sm:p-[50px] rounded-[45px] bg-gradient-to-br from-blue-100 to-blue-300"
   >
-    <h3 class=`flex flex-col col-span-2 lg:col-span-1`>
-      <span class=`w-[fit-content] ${index === 1 ? 'greenhead' : 'whitehead'}`
-        >{titleTop}</span
-      >
-      <span class=`w-[fit-content] ${index === 1 ? 'greenhead' : 'whitehead'}`
-        >{titleBottom}</span
-      >
+    <h3 class="flex flex-col col-span-2 lg:col-span-1 justify-center">
+      <span class="w-fit text-blue-800 font-bold text-2xl sm:text-3xl lg:text-4xl">
+        {titleTop}
+      </span>
+      <span class="w-fit text-blue-800 font-bold text-2xl sm:text-3xl lg:text-4xl mt-1">
+        {titleBottom}
+      </span>
     </h3>
     <picture
       class="w-full h-full row-span-1 order-1 lg:order-none lg:row-span-2 flex justify-center items-center"
@@ -36,13 +30,19 @@ const { index, titleTop, titleBottom, img, alt, link } = Astro.props;
       />
     </picture>
     <div class="flex items-end">
-      <a href={link} class="flex items-center gap-3.5"
-        ><Image src={index === 1 || index === 2 ? gob : wob} alt={alt} />
-        <span class="hidden sm:block">Service Info</span></a
-      >
+      <a href={link} class="flex items-center gap-3.5">
+        <Image src={gob} alt={alt} />
+        <span class="hidden sm:block font-medium">Más Información</span>
+      </a>
     </div>
   </div>
 </Card>
+
+<style>
+  .custom-grid {
+    grid-template: auto auto;
+  }
+</style>
 
 <style>
   .custom-grid {
