--- a/src/components/Icons/ArticleIcon.astro
+++ b/src/components/Icons/ArticleIcon.astro
@@ -1,1 +1,16 @@
-<svg class="mr-1 w-3 h-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h8a2 2 0 012 2v10a2 2 0 002 2H4a2 2 0 01-2-2V5zm3 1h6v4H5V6zm6 6H5v2h6v-2z" clip-rule="evenodd"></path><path d="M15 7h1a2 2 0 012 2v5.5a1.5 1.5 0 01-3 0V7z"></path></svg>
+<svg class="mr-1 w-3 h-3 icon-svg" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M2 5a2 2 0 012-2h8a2 2 0 012 2v10a2 2 0 002 2H4a2 2 0 01-2-2V5zm3 1h6v4H5V6zm6 6H5v2h6v-2z" clip-rule="evenodd"></path><path d="M15 7h1a2 2 0 012 2v5.5a1.5 1.5 0 01-3 0V7z"></path></svg>
+
+<script>
+  import { gsap } from 'gsap';
+
+  // Animate icon on hover
+  const icon = document.querySelector('.icon-svg');
+  if (icon) {
+    icon.addEventListener('mouseenter', () => {
+      gsap.to(icon, { scale: 1.2, duration: 0.3, ease: 'power2.out' });
+    });
+    icon.addEventListener('mouseleave', () => {
+      gsap.to(icon, { scale: 1, duration: 0.3, ease: 'power2.out' });
+    });
+  }
+</script>
